--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@ video {
   left: 0;
 	z-index: -1;
 }
+
+.mute-icon {
+	position:fixed;
+	bottom:0;
+	right: 0;
+	padding-right: 10px;
+	padding-bottom: 10px;
+}
