--- a/www/src/index.css
+++ b/www/src/index.css
@@ -1,3 +1,7 @@
+html {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   background: #fff8ee;
   margin: 0;
@@ -5,6 +9,7 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: transparent;
 }
 
 code {
