--- a/www/src/index.css
+++ b/www/src/index.css
@@ -37,3 +37,12 @@ video {
 	padding-right: 14px;
 	padding-bottom: 14px;
 }
+.vertical-timeline::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 18px;
+  height: 100%;
+  width: 4px;
+  background: #aa9585;
+}
